--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -1,51 +1,69 @@
 .advantages {
-  padding-top: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+  }
 }
+
 .advantages-list {
-  display: flex;
-
-  &__item {
-    flex-basis: calc((100% - 90px) / 4);
-
-    &:not(:last-child) {
-      margin-right: 30px;
+  &__item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
     }
   }
 
-  &__svg {
+  @media screen and (min-width: 480px) {
+    &__svg {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 270px;
+      min-height: 120px;
+      background-color: $primary-bcg-color;
+      border-radius: 4px;
+      margin-bottom: 30px;
+
+      & svg {
+        width: 70px;
+        height: 70px;
+      }
+    }
+    & h3 {
+      margin-top: 0;
+      margin-bottom: 10px;
+
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      color: $title-text-color;
+      text-transform: uppercase;
+    }
+
+    & p {
+      margin: 0;
+
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+      color: $primary-text-color;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 270px;
-    height: 120px;
-    background-color: $primary-bcg-color;
-    border-radius: 4px;
-    margin-bottom: 30px;
+    flex-wrap: wrap;
+    margin: -15px;
 
-    & svg {
-      width: 70px;
-      height: 70px;
+    &__item {
+      flex-basis: calc((100% - 4 * 15px) / 2);
+      margin: 15px;
     }
   }
-  & h3 {
-    margin-top: 0;
-    margin-bottom: 10px;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    color: $title-text-color;
-    text-transform: uppercase;
-  }
-
-  & p {
-    margin: 0;
-
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: $primary-text-color;
+  @media screen and (min-width: 1200px) {
+    &__item {
+      flex-basis: calc((100% - 8 * 15px) / 4);
+    }
   }
 }
