--- a/css/main.css
+++ b/css/main.css
@@ -212,27 +212,24 @@ body {
 }
 
 .hero-container {
-  min-height: 600px;
-  max-width: 1600px;
-  padding-top: 200px;
-  text-align: center;
+  min-height: 400px;
   margin: 0 auto;
+  text-align: center;
+  padding-top: 118px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/HERO.jpg);
   background-color: #c4c4c4;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: auto;
+  background-size: cover;
 }
 
 .hero-container__slogan {
-  width: 696px;
+  width: 360px;
+  margin: 0 auto;
   margin-bottom: 30px;
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.16;
+  font-size: 26px;
+  line-height: 1.61;
   letter-spacing: 0.06em;
   color: #ffffff;
   text-transform: uppercase;
@@ -255,123 +252,174 @@ body {
   background-color: #2196f3;
 }
 
-.advantages {
-  padding-top: 94px;
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    min-height: 600px;
+    max-width: 1600px;
+    padding-top: 200px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .hero-container__slogan {
+    width: 696px;
+    margin-bottom: 30px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.16;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
 }
 
-.advantages-list {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .advantages {
+    padding-top: 94px;
+  }
 }
 
-.advantages-list__item {
-  flex-basis: calc((100% - 90px) / 4);
+@media screen and (max-width: 767px) {
+  .advantages-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.advantages-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 480px) {
+  .advantages-list__svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 270px;
+    min-height: 120px;
+    background-color: #f5f4fa;
+    border-radius: 4px;
+    margin-bottom: 30px;
+  }
+  .advantages-list__svg svg {
+    width: 70px;
+    height: 70px;
+  }
+  .advantages-list h3 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-transform: uppercase;
+  }
+  .advantages-list p {
+    margin: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+  }
 }
 
-.advantages-list__svg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .advantages-list__item {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 
-.advantages-list__svg svg {
-  width: 70px;
-  height: 70px;
-}
-
-.advantages-list h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-transform: uppercase;
-}
-
-.advantages-list p {
-  margin: 0;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
+@media screen and (min-width: 1200px) {
+  .advantages-list__item {
+    flex-basis: calc((100% - 8 * 15px) / 4);
+  }
 }
 
 .about {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  display: hidden;
 }
 
 .about .h2-web {
-  display: flex;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  justify-content: center;
+  display: hidden;
 }
 
-.about-list {
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-.about-list__item {
-  position: relative;
-  flex-basis: calc((100% - 60px) / 3);
-}
-
-.about-list__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.about-list img {
-  display: block;
-}
-
-.about-list .about-description {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: rgba(47, 48, 58, 0.8);
+@media screen and (min-width: 1200px) {
+  .about {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .about .h2-web {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    justify-content: center;
+  }
+  .about-list {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+  }
+  .about-list__item {
+    position: relative;
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  .about-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .about-list img {
+    display: block;
+  }
+  .about-list .about-description {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 }
 
 .team-container {
-  display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: #f5f4fa;
-  flex-direction: column;
+}
+
+@media screen and (min-width: 480px) {
+  .team-container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-container .h2-web {
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   background-color: #f5f4fa;
   text-align: center;
 }
 
-.names {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .team-container .h2-web {
+    margin-bottom: 50px;
+  }
 }
 
 .names-item {
@@ -380,30 +428,51 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.names-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .names-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.names h3 {
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 3%;
-  color: #212121;
+@media screen and (min-width: 480px) {
+  .names h3 {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 3%;
+    color: #212121;
+  }
+  .names p {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    font-weight: 400;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #757575;
+  }
 }
 
-.names p {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  font-weight: 400;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #757575;
+@media screen and (min-width: 768px) {
+  .names {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .names-item {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .names-item {
+    flex-basis: calc((100% - 8 * 15px) / 4);
+  }
 }
 
 .profession {
@@ -445,37 +514,78 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 480px) {
+  .clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients .h2-web {
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
-.clients-list {
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .clients .h2-web {
+    margin-bottom: 50px;
+  }
 }
 
-.clients-item {
-  display: flex;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 480px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
-.clients-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    margin: 0 auto;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .clients-item {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-item {
+    flex-basis: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients-item:hover {
@@ -492,12 +602,26 @@ body {
   align-items: center;
 }
 
-.clients-item__svg {
-  fill: #afb1b8;
-  width: 170px;
-  height: 92px;
-  padding: 16px 32px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 480px) {
+  .clients-item__svg {
+    fill: #afb1b8;
+    width: 210px;
+    height: 92px;
+    padding: 16px 32px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-item__svg {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item__svg {
+    width: 170px;
+  }
 }
 
 .works-filter {
@@ -749,6 +873,17 @@ body {
   letter-spacing: 0.01em;
 }
 
+.footer-form__label .footer-form__title {
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .footer-form__label input {
   width: 358px;
   height: 50px;
@@ -801,16 +936,6 @@ body {
   width: 24px;
   height: 24px;
   margin-left: 10px;
-}
-
-.footer-form__title {
-  margin: 0;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  color: #ffffff;
 }
 
 .backdrop {
