--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,47 +1,56 @@
 .about {
-  padding-top: 94px;
-  padding-bottom: 94px;
-
+  display: hidden;
   .h2-web {
-    display: flex;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    justify-content: center;
+    display: hidden;
   }
 }
 
-.about-list {
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .about {
+    padding-top: 94px;
+    padding-bottom: 94px;
 
-  &__item {
-    position: relative;
-    flex-basis: calc((100% - 60px) / 3);
-
-    &:not(:last-child) {
-      margin-right: 30px;
+    .h2-web {
+      display: flex;
+      margin: 0 auto;
+      margin-bottom: 50px;
+      justify-content: center;
     }
   }
 
-  img {
-    display: block;
-  }
+  .about-list {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
 
-  .about-description {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding-top: 27px;
-    padding-bottom: 27px;
+    &__item {
+      position: relative;
+      flex-basis: calc((100% - 60px) / 3);
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $primary-white-color;
-    background-color: $about-bg-color;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+
+    img {
+      display: block;
+    }
+
+    .about-description {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      padding-top: 27px;
+      padding-bottom: 27px;
+
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 16px;
+      text-align: center;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: $primary-white-color;
+      background-color: $about-bg-color;
+    }
   }
 }
