--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,34 +1,63 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @media screen and (min-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   .h2-web {
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
 
   &-list {
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
+    @media screen and (min-width: 480px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin: 0 auto;
+      justify-content: center;
+      flex-wrap: nowrap;
+    }
   }
 }
 
 .clients-item {
-  display: flex;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid $clients-link-color;
-  border-radius: 4px;
-  cursor: pointer;
+  @media screen and (min-width: 480px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
 
-  transition: border-color 250ms $timing-function;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $clients-link-color;
+    border-radius: 4px;
+    cursor: pointer;
+
+    transition: border-color 250ms $timing-function;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 0 auto;
+  }
 
   &:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
 
   &:hover {
@@ -46,10 +75,19 @@
   }
 
   &__svg {
-    fill: $clients-link-color;
-    width: 170px;
-    height: 92px;
-    padding: 16px 32px;
-    transition: fill 250ms $timing-function;
+    @media screen and (min-width: 480px) {
+      fill: $clients-link-color;
+      width: 210px;
+      height: 92px;
+      padding: 16px 32px;
+      transition: fill 250ms $timing-function;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
   }
 }
