--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,9 +1,8 @@
 .hero-container {
-  min-height: 600px;
-  max-width: 1600px;
-  padding-top: 200px;
-  text-align: center;
+  min-height: 400px;
   margin: 0 auto;
+  text-align: center;
+  padding-top: 118px;
 
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -13,18 +12,16 @@
   background-color: $hero-alt-color;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: auto;
+  background-size: cover;
 
   &__slogan {
-    width: 696px;
+    width: 360px;
+    margin: 0 auto;
     margin-bottom: 30px;
-    margin-top: 0;
-    margin-left: auto;
-    margin-right: auto;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.16;
+    font-size: 26px;
+    line-height: 1.61;
     letter-spacing: 0.06em;
     color: $primary-white-color;
     text-transform: uppercase;
@@ -46,5 +43,30 @@
     letter-spacing: 0.06em;
     color: $primary-white-color;
     background-color: $accent-color;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    min-height: 600px;
+    max-width: 1600px;
+    padding-top: 200px;
+    text-align: center;
+    margin: 0 auto;
+
+    &__slogan {
+      width: 696px;
+      margin-bottom: 30px;
+      margin-top: 0;
+      margin-left: auto;
+      margin-right: auto;
+
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.16;
+      letter-spacing: 0.06em;
+      color: $primary-white-color;
+      text-transform: uppercase;
+    }
   }
 }
