--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,7 +1,6 @@
-.about {
-  display: hidden;
-  .h2-web {
-    display: hidden;
+@media screen and (max-width: 1199px) {
+  .about {
+    display: none;
   }
 }
 
