--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -93,6 +93,7 @@ body {
 }
 
 .header .container {
+  position: relative;
   display: flex;
   align-items: center;
   padding-top: 24px;
@@ -100,6 +101,7 @@ body {
 }
 
 .header .navig {
+  position: relative;
   display: flex;
   align-items: center;
 }
@@ -211,6 +213,41 @@ body {
   fill: #2196f3;
 }
 
+.burger {
+  display: inline-flex;
+  margin: 0;
+  padding: 16px 24px;
+  border: none;
+  background-color: aqua;
+}
+
+.burger .burger-close {
+  display: none;
+}
+
+.burger.is-open .burger-close {
+  display: block;
+}
+
+.burger.is-open .burger-open {
+  display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
 .hero-container {
   min-height: 400px;
   margin: 0 auto;
@@ -272,6 +309,13 @@ body {
     letter-spacing: 0.06em;
     color: #ffffff;
     text-transform: uppercase;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .advantages {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
@@ -420,12 +464,6 @@ body {
   }
 }
 
-.names-item {
-  width: 270px;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
 @media screen and (max-width: 767px) {
   .names-item:not(:last-child) {
     margin-bottom: 30px;
@@ -433,6 +471,12 @@ body {
 }
 
 @media screen and (min-width: 480px) {
+  .names-item {
+    margin: 0 auto;
+    width: 270px;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
   .names h3 {
     display: flex;
     justify-content: center;
@@ -773,18 +817,44 @@ body {
 }
 
 .footer-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
-.footer-container .container {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 480px) {
+  .footer-container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container .container {
+    justify-content: flex-start;
+  }
 }
 
 .footer-main {
-  margin-right: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-main {
+    align-items: flex-start;
+    margin-right: 70px;
+    padding-bottom: 0;
+  }
 }
 
 .footer-main p {
@@ -798,6 +868,18 @@ body {
   color: #ffffff;
 }
 
+.footer-main .address-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-main .address-footer {
+    align-items: flex-start;
+  }
+}
+
 .address-footer__item {
   font-style: normal;
   font-weight: 400;
@@ -805,6 +887,10 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+.address-footer__item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .address-footer__item a {
@@ -818,17 +904,23 @@ body {
   color: #2196f3;
 }
 
-.address-footer__item:not(:last-child) {
-  margin-bottom: 9px;
+.join {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60px;
 }
 
-.join {
-  display: block;
-  margin: 0;
+@media screen and (min-width: 1200px) {
+  .join {
+    align-items: flex-start;
+    margin-right: 93px;
+    padding-bottom: 0;
+  }
 }
 
 .join h3 {
-  margin: 0 auto;
+  margin: 0;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -873,26 +965,36 @@ body {
   fill: #ffffff;
 }
 
-.footer-form {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  padding-left: 93px;
-  height: 100%;
-  align-items: flex-start;
+@media screen and (min-width: 480px) {
+  .footer-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    position: relative;
+    align-items: flex-start;
+  }
 }
 
 .footer-form__label {
   display: flex;
   flex-direction: column;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  padding-bottom: 20px;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__label {
+    padding-bottom: 0px;
+    align-items: flex-start;
+  }
 }
 
 .footer-form__label .footer-form__title {
-  margin: 0;
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -902,37 +1004,41 @@ body {
   color: #ffffff;
 }
 
-.footer-form__label input {
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  margin: 0;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  cursor: pointer;
-  background-color: unset;
-  color: #000000;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 480px) {
+  .footer-form__label input {
+    width: 450px;
+    height: 50px;
+    padding-left: 16px;
+    margin: 0;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: unset;
+    color: #000000;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-form__label input placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  .footer-form__label input:not(:placeholder-shown) {
+    background-color: #ffffff;
+  }
 }
 
-.footer-form__label input placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-form__label input:not(:placeholder-shown) {
-  background-color: #ffffff;
+@media screen and (min-width: 1200px) {
+  .footer-form__label input {
+    width: 358px;
+    height: 50px;
+  }
 }
 
 .footer-form__submit {
-  position: absolute;
-  bottom: 0;
-  right: -212px;
-  display: inline-flex;
+  display: flex;
   margin: 0 auto;
   width: 200px;
   height: 50px;
@@ -948,6 +1054,14 @@ body {
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__submit {
+    position: absolute;
+    bottom: 0;
+    right: -212px;
+  }
 }
 
 .footer-form__submit .footer-btn-svg {
@@ -981,13 +1095,20 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-height: 581px;
-  min-width: 528px;
+  height: 609px;
+  width: 450px;
   padding: 40px;
   border-radius: 4px;
   background-color: #ffffff;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop .modal {
+    min-height: 581px;
+    min-width: 528px;
+  }
 }
 
 .modal-form__close {
