--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -23,14 +23,19 @@
     top: 50%;
     left: 50%;
 
-    min-height: 581px;
-    min-width: 528px;
+    height: 609px;
+    width: 450px;
     padding: 40px;
     border-radius: 4px;
     background-color: $primary-white-color;
 
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms $timing-function;
+
+    @media screen and (min-width: 1200px) {
+      min-height: 581px;
+      min-width: 528px;
+    }
   }
 }
 
