--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -1,4 +1,8 @@
 .advantages {
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
   }
