--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,17 +1,35 @@
 .footer-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
-
   background-color: $title-bcg-color;
 
+  @media screen and (min-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .container {
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: baseline;
+    }
+
+    @media screen and (min-width: 1200px) {
+      justify-content: flex-start;
+    }
   }
 }
 
 .footer-main {
-  margin-right: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+    margin-right: 70px;
+    padding-bottom: 0;
+  }
 
   p {
     margin-top: 0;
@@ -24,6 +42,16 @@
     letter-spacing: 0.03em;
     color: $primary-white-color;
   }
+
+  .address-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+      align-items: flex-start;
+    }
+  }
 }
 
 .address-footer__item {
@@ -33,6 +61,10 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: $primary-white-color;
+
+  &:not(:last-child) {
+    margin-bottom: 9px;
+  }
 
   a {
     color: $footer-text-links;
@@ -44,19 +76,22 @@
   &:focus a {
     color: $accent-color;
   }
-
-  &:not(:last-child) {
-    margin-bottom: 9px;
-  }
 }
 
 .join {
-  display: block;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+    margin-right: 93px;
+    padding-bottom: 0;
+  }
 
   h3 {
-    margin: 0 auto;
-
+    margin: 0;
     font-weight: bold;
     font-size: 14px;
     line-height: 16px;
@@ -107,25 +142,29 @@
 }
 
 .footer-form {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  padding-left: 93px;
-  height: 100%;
-  align-items: flex-start;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  @media screen and (min-width: 1200px) {
+    position: relative;
+    align-items: flex-start;
+  }
 }
 
 .footer-form__label {
   display: flex;
   flex-direction: column;
+  padding-bottom: 20px;
+  align-items: center;
 
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0px;
+    align-items: flex-start;
+  }
 
   .footer-form__title {
-    margin: 0;
     margin-bottom: 20px;
 
     font-weight: 700;
@@ -137,42 +176,47 @@
   }
 
   input {
-    width: 358px;
-    height: 50px;
-    padding-left: 16px;
-    margin: 0;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: unset;
-    color: $logo-primary-header;
-    transition: background-color 250ms $timing-function;
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      height: 50px;
+      padding-left: 16px;
+      margin: 0;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+      border-radius: 4px;
+      cursor: pointer;
+      background-color: unset;
+      color: $logo-primary-header;
+      transition: background-color 250ms $timing-function;
 
-    placeholder {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 1.25;
-      letter-spacing: 0.03em;
-      color: rgba(255, 255, 255, 0.6);
+      placeholder {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+      }
+
+      &:not(:placeholder-shown) {
+        background-color: $primary-white-color;
+      }
     }
 
-    &:not(:placeholder-shown) {
-      background-color: $primary-white-color;
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      height: 50px;
     }
   }
 }
 
 .footer-form__submit {
-  position: absolute;
-  bottom: 0;
-  right: -212px;
-  display: inline-flex;
+  display: flex;
   margin: 0 auto;
   width: 200px;
   height: 50px;
   justify-content: center;
   align-items: center;
+
   border: none;
   border-radius: 4px;
   background-color: $accent-color;
@@ -183,6 +227,12 @@
   letter-spacing: 0.06em;
   color: $primary-white-color;
   cursor: pointer;
+
+  @media screen and (min-width: 1200px) {
+    position: absolute;
+    bottom: 0;
+    right: -212px;
+  }
 
   .footer-btn-svg {
     width: 24px;
