--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -23,19 +23,20 @@
 }
 
 .names {
-  &-item {
-    width: 270px;
-    background-color: $primary-white-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-  }
-
   &-item:not(:last-child) {
     @media screen and (max-width: 767px) {
       margin-bottom: 30px;
     }
   }
   @media screen and (min-width: 480px) {
+    &-item {
+      margin: 0 auto;
+      width: 270px;
+      background-color: $primary-white-color;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    }
+
     h3 {
       display: flex;
       justify-content: center;
