--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,5 +21,6 @@
 @import './layout/filter';
 @import './layout/works';
 @import './layout/footer';
+@import './layout/mobile';
 
 @import './components/modal';
