--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,162 +1,150 @@
-.header {
-  border-bottom: 1px solid $header-border-color;
+@media screen and (min-width: 768px) {
+  .header {
+    border-bottom: 1px solid $header-border-color;
 
-  & .container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
-  & .navig {
-    position: relative;
-    display: flex;
-    align-items: center;
+    & .container {
+      display: flex;
+      align-items: center;
+      height: 80px;
 
-    & .logo {
-      margin-right: 93px;
+      & .logo {
+        margin-right: 88px;
+        @media screen and (min-width: 1200px) {
+          margin-right: 93px;
+        }
+      }
+    }
+    & .navig {
+      display: flex;
+      align-items: center;
+    }
+    & .navig-menu {
+      display: flex;
+      align-items: center;
+    }
+
+    & .navig-address {
+      display: flex;
+      flex-direction: column;
+      margin-left: auto;
+      align-items: flex-end;
+
+      @media screen and (min-width: 1200px) {
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+      }
     }
   }
-  & .navig-menu {
-    display: flex;
-    align-items: center;
+
+  .navig-menu__item {
+    &:not(:last-child) {
+      margin-right: 40px;
+    }
+    & a {
+      position: relative;
+      padding-top: 30px;
+      padding-bottom: 30px;
+
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+      color: $title-text-color;
+      background-color: $primary-white-color;
+      text-decoration: none;
+
+      transition: color 250ms $timing-function;
+
+      &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: $accent-color;
+        opacity: 0;
+
+        transition: opacity 250ms $timing-function;
+      }
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: $accent-color;
+      }
+    }
   }
 
-  & .navig-address {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-  }
-}
+  .studio a,
+  .portfolio a {
+    color: $accent-color;
 
-.navig-menu__item {
-  &:not(:last-child) {
-    margin-right: 40px;
-  }
-  & a {
-    position: relative;
-    padding-top: 30px;
-    padding-bottom: 30px;
-
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: $title-text-color;
-    background-color: $primary-white-color;
-    text-decoration: none;
-
-    transition: color 250ms $timing-function;
-
+    &::after,
     &::after {
-      content: '';
-      position: absolute;
-      display: block;
-      left: 0;
-      bottom: -1px;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: $accent-color;
-      opacity: 0;
+      opacity: 1;
+    }
+  }
 
-      transition: opacity 250ms $timing-function;
+  .navig-address__item {
+    @media screen and (min-width: 768px) {
+      margin-right: 0;
     }
 
-    &:hover,
-    &:focus,
-    &:active {
+    &:not(:last-child) {
+      @media screen and (min-width: 768px) {
+        margin-bottom: 10px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 0;
+        margin-right: 50px;
+      }
+    }
+    .address-link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      font-size: 14px;
+      line-height: 1.14px;
+      letter-spacing: 0.02em;
+      color: $primary-text-color;
+      background-color: $primary-white-color;
+      text-decoration: none;
+      transition: color 250ms $timing-function;
+    }
+    &:hover .address-link,
+    &:focus .address-link {
       color: $accent-color;
     }
+    .address-mail {
+      fill: $primary-text-color;
+      width: 16px;
+      height: 12px;
+      margin-right: 10px;
+      transition: fill 250ms $timing-function;
+    }
+    .address-phone {
+      fill: $primary-text-color;
+      width: 10px;
+      height: 16px;
+      margin-right: 10px;
+      transition: fill 250ms $timing-function;
+    }
+    &:hover .address-mail {
+      fill: $accent-color;
+    }
+    &:hover .address-phone {
+      fill: $accent-color;
+    }
   }
 }
 
-.studio a,
-.portfolio a {
-  color: $accent-color;
-
-  &::after,
-  &::after {
-    opacity: 1;
-  }
-}
-
-.navig-address__item {
-  &:not(:last-child) {
-    margin-right: 50px;
-  }
-  .address-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 14px;
-    line-height: 1.14px;
-    letter-spacing: 0.02em;
-    color: $primary-text-color;
-    background-color: $primary-white-color;
-    text-decoration: none;
-    transition: color 250ms $timing-function;
-  }
-  &:hover .address-link,
-  &:focus .address-link {
-    color: $accent-color;
-  }
-  .address-mail {
-    fill: $primary-text-color;
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
-    transition: fill 250ms $timing-function;
-  }
-  .address-phone {
-    fill: $primary-text-color;
-    width: 10px;
-    height: 16px;
-    margin-right: 10px;
-    transition: fill 250ms $timing-function;
-  }
-  &:hover .address-mail {
-    fill: $accent-color;
-  }
-  &:hover .address-phone {
-    fill: $accent-color;
-  }
-}
-
-.burger {
-  display: inline-flex;
-  margin: 0;
-  padding: 16px 24px;
-  border: none;
-  background-color: aqua;
-
-  .burger-close {
+@media screen and (max-width: 767px) {
+  .header {
     display: none;
-  }
-}
-
-.burger.is-open {
-  .burger-close {
-    display: block;
-  }
-  .burger-open {
-    display: none;
-  }
-}
-
-.menu-container {
-  display: none;
-
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-
-  &.is-open {
-    display: block;
   }
 }
