--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,12 @@ body {
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-container {
+    background-image: url("../../images/HERO@2x.jpg");
+  }
+}
+
 .hero-container__slogan {
   width: 360px;
   margin: 0 auto;
@@ -712,6 +718,7 @@ body {
   .works .projects-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     margin: -15px;
   }
@@ -1080,11 +1087,22 @@ body {
   margin-right: 15px;
   padding: 12px 8px;
   border: none;
-  background-color: aqua;
-  z-index: 1;
+  background-color: #ffffff;
+  outline: none;
+  z-index: 2;
+  cursor: pointer;
 }
 
-.burger .burger-open {
+.burger svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.burger:hover svg,
+.burger:focus svg {
+  fill: #2196f3;
+}
+
+.burger-open {
   display: none;
 }
 
@@ -1100,8 +1118,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  background-color: peachpuff;
+  background-color: #ffffff;
   padding-left: 40px;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
@@ -1111,23 +1130,20 @@ body {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
+    height: 796px;
   }
   .mobile-container.is-open {
     display: block;
   }
 }
 
-.mobile-container__bottom {
-  display: block;
-}
-
 .mobile-menu {
   margin-top: 48px;
+  margin-bottom: 302px;
 }
 
-.mobile-menu__item {
-  text-align: left;
+.mobile-menu__item:not(:last-child) {
+  padding-bottom: 32px;
 }
 
 .mobile-menu__item a {
