--- a/scss/layout/_mobile.scss
+++ b/scss/layout/_mobile.scss
@@ -15,12 +15,23 @@
   margin-right: 15px;
   padding: 12px 8px;
   border: none;
-  background-color: aqua;
-  z-index: 1;
+  background-color: $primary-white-color;
+  outline: none;
+  z-index: 2;
+  cursor: pointer;
 
-  .burger-open {
-    display: none;
+  & svg {
+    transition: fill 250ms $timing-function;
   }
+
+  &:hover svg,
+  &:focus svg {
+    fill: $accent-color;
+  }
+}
+
+.burger-open {
+  display: none;
 }
 
 .burger.is-open {
@@ -36,8 +47,9 @@
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  background-color: peachpuff;
+  background-color: $primary-white-color;
   padding-left: 40px;
+  z-index: 1;
 
   @media screen and (max-width: 767px) {
     display: none;
@@ -45,23 +57,23 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
+    height: 796px;
 
     &.is-open {
       display: block;
     }
   }
-
-  &__bottom {
-    display: block;
-  }
 }
 
 .mobile-menu {
   margin-top: 48px;
+  margin-bottom: 302px;
 
   &__item {
-    text-align: left;
+    &:not(:last-child) {
+      padding-bottom: 32px;
+    }
+
     & a {
       font-size: 40px;
       line-height: 1.17;
