--- a/scss/layout/_works.scss
+++ b/scss/layout/_works.scss
@@ -12,6 +12,7 @@
     @media screen and (min-width: 768px) {
       display: flex;
       justify-content: center;
+      align-items: center;
       flex-wrap: wrap;
       margin: -15px;
     }
