--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -8,7 +8,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/HERO.jpg);
+    url('../../images/HERO.jpg');
   background-color: $hero-alt-color;
   background-repeat: no-repeat;
   background-position: center;
