--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: auto;
-    align-items: flex-end;
+    align-items: flex-start;
   }
 }
 
@@ -178,7 +178,7 @@ body {
 
 @media screen and (min-width: 768px) and (min-width: 768px) {
   .navig-address__item {
-    margin-right: 0;
+    margin-left: 10px;
   }
 }
 
@@ -354,6 +354,15 @@ body {
     color: #212121;
     text-transform: uppercase;
   }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .advantages-list h3 {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 480px) {
   .advantages-list p {
     margin: 0;
     font-weight: 400;
@@ -471,9 +480,13 @@ body {
 @media screen and (min-width: 480px) {
   .names-item {
     margin: 0 auto;
-    width: 270px;
+    max-width: 270px;
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  .names img {
+    width: 450px;
+    height: 460px;
   }
   .names h3 {
     display: flex;
@@ -506,12 +519,22 @@ body {
   .names-item {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
+    width: 354px;
+    height: 374px;
+  }
+  .names-item img {
+    width: 354px;
+    height: 374px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .names-item {
     flex-basis: calc((100% - 8 * 15px) / 4);
+  }
+  .names-item img {
+    width: 270px;
+    height: 260px;
   }
 }
 
@@ -669,11 +692,35 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   padding-bottom: 0;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 767px) {
+  .works-filter {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .works-filter {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .works-filter {
+    margin-bottom: 50px;
+  }
 }
 
 .works-filter li:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .works-filter li {
+    margin-bottom: 15px;
+  }
 }
 
 .works-filter .works-filter__button {
@@ -717,7 +764,7 @@ body {
 @media screen and (min-width: 768px) {
   .works .projects-list {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
     margin: -15px;
@@ -725,6 +772,7 @@ body {
 }
 
 .projects-item {
+  max-width: 370px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -788,7 +836,7 @@ body {
 }
 
 .projects-item__description {
-  width: 370px;
+  width: 100%;
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
