--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -41,6 +41,10 @@
       letter-spacing: 0.03em;
       color: $title-text-color;
       text-transform: uppercase;
+
+      @media screen and (max-width: 767px) {
+        text-align: center;
+      }
     }
 
     & p {
