--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -27,7 +27,7 @@
       display: flex;
       flex-direction: column;
       margin-left: auto;
-      align-items: flex-end;
+      align-items: flex-start;
 
       @media screen and (min-width: 1200px) {
         align-items: center;
@@ -90,7 +90,7 @@
 
   .navig-address__item {
     @media screen and (min-width: 768px) {
-      margin-right: 0;
+      margin-left: 10px;
     }
 
     &:not(:last-child) {
