--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -31,10 +31,15 @@
   @media screen and (min-width: 480px) {
     &-item {
       margin: 0 auto;
-      width: 270px;
+      max-width: 270px;
       background-color: $primary-white-color;
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    }
+
+    img {
+      width: 450px;
+      height: 460px;
     }
 
     h3 {
@@ -70,12 +75,25 @@
     &-item {
       flex-basis: calc((100% - 4 * 15px) / 2);
       margin: 15px;
+
+      width: 354px;
+      height: 374px;
+
+      img {
+        width: 354px;
+        height: 374px;
+      }
     }
   }
 
   @media screen and (min-width: 1200px) {
     &-item {
       flex-basis: calc((100% - 8 * 15px) / 4);
+
+      img {
+        width: 270px;
+        height: 260px;
+      }
     }
   }
 }
