--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -31,7 +31,7 @@
   @media screen and (min-width: 480px) {
     &-item {
       margin: 0 auto;
-      max-width: 270px;
+      max-width: 450px;
       background-color: $primary-white-color;
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -75,9 +75,7 @@
     &-item {
       flex-basis: calc((100% - 4 * 15px) / 2);
       margin: 15px;
-
-      width: 354px;
-      height: 374px;
+      max-width: 354px;
 
       img {
         width: 354px;
@@ -89,6 +87,7 @@
   @media screen and (min-width: 1200px) {
     &-item {
       flex-basis: calc((100% - 8 * 15px) / 4);
+      max-width: 270px;
 
       img {
         width: 270px;
@@ -99,10 +98,17 @@
 }
 
 .profession {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 32px;
-  padding-right: 32px;
+  @media screen and (min-width: 480px) {
+    padding: 30px 122px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 30px 74px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 30px 32px;
+  }
 
   .team-icons {
     margin: 0 auto;
